<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">InstagramViewer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="popular_photos_caption">Popular Photos</string>
    <string name="caption_default_text">No caption</string>
    <string name="username_label">User name</string>
    <string name="likes_count_label">Likes</string>
    <string name="comment1_label">comment 1</string>
    <string name="comment2_label">comment 2</string>
    <string name="timestamp_label">time</string>

</resources>
