<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/imgPhoto"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_margin="0dp"
        android:adjustViewBounds="true"
        android:background="#000000"
        android:padding="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_launcher" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:alpha="0.8"
        android:gravity="center_vertical"
        android:background="#ffffff"
        android:orientation="horizontal" >

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/imgAvatar"
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="0dp"
            android:padding="10dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:layout_margin="0dp"
            android:padding="0dp"
            android:gravity="left|center_vertical"
            android:text="@string/username_label" />

        <TextView
            android:id="@+id/tvCreatedTime"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="0dp"
            android:padding="0dp"
            android:gravity="center"
            android:text="@string/timestamp_label" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imgLikes"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imgPhoto"
        android:layout_margin="0dp"
        android:adjustViewBounds="true"
        android:background="#ffffff"
        android:padding="2dp"
        android:scaleType="fitCenter"
        android:src="@drawable/favorite" />

    <TextView
        android:id="@+id/tvLikes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgPhoto"
        android:layout_toRightOf="@+id/imgLikes"
        android:paddingLeft="5dp"
        android:text="@string/likes_count_label"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/tvCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imgLikes"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/caption_default_text" />

    <TextView
        android:id="@+id/tvComment1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvCaption"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/comment1_label" />

    <TextView
        android:id="@+id/tvComment2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvComment1"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/comment2_label" />

</RelativeLayout>